--- a/tools/example.Info.plist
+++ b/tools/example.Info.plist
@@ -3,12 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleExecutable</key>
-	<string>Walls And Holes</string>
+	<string>WallsAndHoles</string>
 	<key>CFBundleGetInfoString</key>
 	<string>Created by Qt/QMake</string>
 	<key>CFBundleIconFile</key>
-	<string>W.icns</string>
-
+	<string>WAH</string>
 	<key>CFBundleIdentifier</key>
 	<string>anonymous.WallsAndHoles</string>
 	<key>CFBundlePackageType</key>
@@ -19,7 +18,7 @@
 			<key>CFBundleTypeName</key>
 			<string>Walls And Holes</string>
 			<key>CFBundleTypeIconFile</key>
-			<string>W.icns</string>
+			<string>WAH</string>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleTypeExtensions</key>
