Updated git ignore to ignore build specific files from win_deploy

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,8 @@ WallsAndHoles/WallsAndHoles.pro.user
 release
 
 *.orig
+
+# Depolyment builds
+
+Deployment/win_deploy/*.exe
+Deployment/win_deploy/packages/com.wah.product/data/*
