Updated gitignore and removed binaries

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ release
 
 Deployment/win_deploy/*.exe
 Deployment/win_deploy/packages/com.wah.product/data/*
+
+Docs/UserManual/src/_build/
+Docs/UserManual/src/downloads/
