Modify ma_deploy guide line

--- a/Deployment/mac_deploy/Makefile
+++ b/Deployment/mac_deploy/Makefile
@@ -1,4 +1,5 @@
 DMGMaker = ./tools/create-dmg
+DEPLOYFIX = ./tools/macdeployqt
 ICON = ../../WallsAndHoles/images/wahicon.icns
 DMGSource = ./release
 
